tests/neg/param-control.stk
import stk.IO.stdout

param pageWidth: Int
param newLine: String

fun pretty(s: String): Unit =
  pageWidth p

fun normalize(s: String): Unit =
  print s
  print newLine

fun foo() =
  pretty "hello, world!" allow stdout  // error
  normalize "hello, world!" allow stdout, newLine

fun bar() =
  print
    "Bonjour!" + newLine

fun main =  // error
  foo with pageWidth = 100, newLine = "\n"
  bar
